--- a/alpine-java-1.7/Dockerfile
+++ b/alpine-java-1.7/Dockerfile
@@ -9,8 +9,8 @@ RUN apk upgrade --update \
     && apk add --update ca-certificates wget bash \
     && wget -qO /tmp/glibc-2.21-r2.apk "https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64/glibc-2.21-r2.apk" \
     && apk add --allow-untrusted /tmp/glibc-2.21-r2.apk \
-    && wget -qO /tmp/glibc-bin-2.21-r2.apk "https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64/glibc-bin-2.21-r2.apk" && \
-    apk add --allow-untrusted /tmp/glibc-bin-2.21-r2.apk \
+    && wget -qO /tmp/glibc-bin-2.21-r2.apk "https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64/glibc-bin-2.21-r2.apk" \
+    && apk add --allow-untrusted /tmp/glibc-bin-2.21-r2.apk \
     && /usr/glibc/usr/bin/ldconfig /lib /usr/glibc/usr/lib \
     && mkdir /opt \
 # Install Java.
@@ -51,4 +51,5 @@ RUN apk upgrade --update \
        /opt/java/jre/lib/oblique-fonts \
        /opt/java/jre/lib/plugin.jar \
        /tmp/* /var/cache/apk/* \
-       && apk del wget
+       && apk del wget \
+       && find /opt/java/ -maxdepth 1 -mindepth 1 | grep -v jre | xargs rm -rf
